Production-Org-Metadata/force-app/main/default/objects/Bank_Detail__c/Bank_Detail__c.object-meta.xml
<CustomObject>
    <label>Bank Detail</label>
    <nameField>
        <label>Bank Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bank Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>