Production-Org-Metadata/force-app/main/default/objects/Bank_Detail__c/fields/Bank_Branch_Name__c.field-meta.xml
<CustomField>
    <fullName>Bank_Branch_Name__c</fullName>
    <label>Bank Branch Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>