Production-Org-Metadata/force-app/main/default/objects/Bank_Detail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Bank_Account_Number__c</columns>
    <columns>Bank_Branch_Name__c</columns>
    <columns>Employee__c</columns>
    <columns>IFSC__c</columns>
    <columns>Primary_Account__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>